<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projetofood.Activity.Projeto.Activity.IntroActivity"
    android:background="@drawable/background_intro"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/t01_titulo"
        android:textColor="@color/roxo_titulo"
        android:textStyle="bold"
        android:textSize="40sp"

        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"

        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/SubTitulo01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t01_subtitulo"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/roxo_titulo"

        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"
        android:layout_marginEnd="100sp"


        />

    <TextView
        android:id="@+id/Subtitulo02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/t01_subtitulo02"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/roxo_titulo"


        app:layout_constraintTop_toBottomOf="@+id/SubTitulo01"
        app:layout_constraintStart_toStartOf="@+id/SubTitulo01"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50sp"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"

        android:background="@drawable/white_button"
        android:elevation="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subtitulo02"
        app:layout_constraintStart_toStartOf="@+id/Subtitulo02"
        app:layout_constraintEnd_toEndOf="@+id/Subtitulo02" >


    <TextView
        android:id="@+id/Subtitulo03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/t01_button"
        android:textSize="23dp"
        android:textStyle="bold"
        android:textColor="@color/orange"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

