<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projetofood.Activity.Projeto.Activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/profile"

                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toTopOf="@+id/tl_Name"
                    app:layout_constraintBottom_toBottomOf="@+id/tl_Name"
                    app:layout_constraintEnd_toEndOf="parent"

                />

                <TextView
                    android:id="@+id/tl_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/t02_Titulo"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/t02tl_orange"

                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"


                    />

                <TextView
                    android:id="@+id/txt_pesquisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/pesquisar"
                    android:textSize="20sp"
                    android:textColor="@color/blackk"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tl_Name"
                    app:layout_constraintTop_toBottomOf="@+id/tl_Name"
                    />


                    <ImageView
                        android:id="@+id/banner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/banner"

                        android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/txt_pesquisa"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints,NotSibling" />

                <TextView
                    android:id="@+id/off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/Desconto"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"


                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="40dp"
                    app:layout_constraintEnd_toEndOf="@+id/banner"
                    app:layout_constraintTop_toTopOf="@+id/banner"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/Desconto"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"


                    app:layout_constraintStart_toStartOf="@+id/off"
                    app:layout_constraintEnd_toEndOf="@+id/off"
                    app:layout_constraintTop_toBottomOf="@+id/off"
                    />







            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>